--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ node_js:
   - '8'
 
 script: yarn run validate
-
-after_success:
-  - $(yarn bin)/frans-scripts travis-after-success
+after_success: 
+  - npx codecov
+  - yarn run release
 
 branches:
   only:
